fix css styles for TextInput, and fix jump animation

--- a/src/componentHelpers/TextInput/TextInput.scss
+++ b/src/componentHelpers/TextInput/TextInput.scss
@@ -2,6 +2,10 @@
   background: transparent;
   border: none;
   color: inherit;
+  // font-size: inherit;
+  // font-weight: inherit;
+  width: 100%;
+  text-align: inherit;
 }
 
 .input-text__input:focus {
